--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "local-packages/flymake-ruff"]
 	path = local-packages/flymake-ruff
-	url = https://github.com/erickgnavar/flymake-ruff
+	url = https://github.com/Cadair/flymake-ruff
